Added H1 header and paragraph

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 		<title>Simple website placeholder</title>
 	</head>
 	<body>
+		<h1>Sample Top-Level Header</h1>
+		<p>Paragraph for this header</p>
 	</body>
 </html>
