Added simple H2 header and paragraph

--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 		<title>Simple website placeholder</title>
 	</head>
 	<body>
+		
+
+		<h2>Simple H2 Header</h2>
+		<p>Sample paragraph for H2 header</p>
 	</body>
 </html>
